Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77502

[REG] QToolButtons elide when they shouldn't

XMLWordPrintable

    • b68ade8282274c2d4ee1e4f861d34ea0655c1eab (qt/qtbase/dev) 57e8fe86bdd3a38e8b968f553a3cfaa6541feee1 (qt/qtbase/5.14)

      This can be re-produced in with the attached code in a multi desktop system with different dpi settings. (qtdiag.txt attached).

        1. qtdiag.txt
          7 kB
        2. screenshot-1.png
          screenshot-1.png
          5 kB
        3. toolButtonElide.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            tmartsum Thorbjørn Lund Martsum
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes